--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -2,5 +2,5 @@
 # via `site.*`. So for example, {{ site.title }} can be used
 # in a template to get the contents of the `title` key.
 title: Journey into PHP
-subtitle: Calling at Symfony2, BDD, Code Katas...
+subtitle: We'll be calling at Symfony2, BDD, Code Katas...
 url: http://192.168.100.100:8000
